# i-twitch-history

./: .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: __init__.py  channel.py  chat.py  pyproject.toml
backend/tests/integration/: test_channel.py  test_chat.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
tests/integration/: test_chat.py
twichist/: chat.py
